tdf#162639 sw: Fix kashida justification affected by zoom level

Writer kashida justification layout was using the output device to
measure the space available for kashida glyphs, rather than the
reference device. This caused layout to change depending on zoom.

Change-Id: I9b3d400ea7a31503d85cbe71253068f7e8a037aa
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172454
Tested-by: Jenkins
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>